# MedicalUrProject

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py
backend/: alembic.ini  main.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_07_22_1746-4cd687ef8f4e_create_appointment_model.py  2025_07_24_2006-85e51d66826b_change_status_field.py  2025_07_25_1718-4864ae78f549_create_admin_model.py  2025_08_21_2043-c83329710135_create_tables.py
backend/api/: __init__.py
backend/api/v1/: __init__.py
backend/api/v1/admin/: managers.py  routes.py  services.py
backend/api/v1/admin_page/: handlers.py  managers.py  routes.py  schemas.py  services.py
backend/api/v1/appointments/: managers.py  routes.py  schemas.py  services.py
backend/api/v1/main_page/: managers.py  routes.py  schemas.py  services.py
backend/core/: settings.py
backend/core/models/: __init__.py  admin.py  appointment.py  base.py  db_helper.py  redis_helper.py
backend/core/models/mixins/: id_mixin.py  timestamp_mixin.py
frontend/: index.html  script.js  style.css
static/css/: style.css
static/js/: main.js
templates/: base.html  blog-article.html  index.html
